// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kebab-case plugin should normalize properties 1`] = `
{
  "backgroundColor": "red",
  "color": "blue",
}
`;

exports[`kebab-case plugin should normalized nested objects 1`] = `
{
  ":hover": {
    "backgroundColor": "red",
  },
  "color": "blue",
}
`;
